--- a/package.json
+++ b/package.json
@@ -2,21 +2,30 @@
   "name": "fewcents",
   "version": "1.0.0",
   "private": true,
-  "description": "fewcents",
+  "description": "Few¢ents | Monetize non-subscribers better",
   "author": "Raghvendra Singh",
   "keywords": [
     "gatsby"
   ],
   "scripts": {
     "develop": "gatsby develop",
+    "dev": "GATSBY_ACTIVE_ENV=development npm run develop",
+    "prod": "GATSBY_ACTIVE_ENV=production npm run develop",
     "start": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
+    "axios": "^0.21.1",
     "gatsby": "^3.6.2",
+    "gatsby-source-filesystem": "^3.6.0",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
+    "url-join": "^4.0.1"
   }
 }
