remove state code from city

--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-GATSBY_API_URL=https://api.example.com/
+GATSBY_API_URL=https://thedigitalapps.com/world-countries-listing/
 API_KEY=927349872349798
